# protocore

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.en.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: README.md  api-reference.md  architecture.md  core-must-haves.md  events-contract.md  examples.md  guide.en.md  guide.md  hooks.md  migration.md  testing.md  vllm.md
examples/: auto_select.py  minimal_run.py  qwen_local.py  structured_output_example.py  tools_example.py
protocore/: __init__.py  compression.py  constants.py  context.py  events.py  factories.py  ingress.py  json_utils.py  logging_utils.py  orchestrator.py  orchestrator_errors.py  orchestrator_state.py  orchestrator_utils.py  parallel.py  protocols.py  registry.py  shell_handler.py  shell_safety.py  testing.py  tool_dispatch.py  types.py
protocore/hooks/: __init__.py  manager.py  specs.py
protocore/integrations/: __init__.py  openai.py
tests/: test_batch_a_security.py  test_batch_b_orchestration.py  test_batch_c_contracts.py  test_compatibility.py  test_context_core_paths.py  test_contract_remediations.py  test_contracts.py  test_e2e.py  test_edge_cases.py  test_integration_boundaries.py  test_llm_adapter.py  test_llm_adapter_live.py  test_orchestrator_core_paths.py  test_orchestrator_utils_core_paths.py  test_phase3_remediations.py  test_skills_runtime.py  test_testing_helpers.py  test_user_sim_audit_fixes.py  test_user_sim_p3_fixes.py
(+5 files in other folders)
